added getting user by role for manager
